Remove the bumblbebee-status launch script file.

--- a/i3/bumblebee_status/bumblebee-status.conf
+++ b/i3/bumblebee_status/bumblebee-status.conf
@@ -1,3 +1,7 @@
+[core]
+modules = weather,battery,cpu,memory,sensors2,aerlive,amixer,datetime
+theme = dracula-powerline
+
 [module-parameters]
 datetime.format = %a %m/%d %H:%M
 memory.format = {percent:05.02f}%
