--- a/i3/bumblebee-status.conf
+++ b/i3/bumblebee-status.conf
@@ -1,5 +1,5 @@
 [core]
-modules = weather,battery,cpu,memory,sensors2,aerlive,amixer,datetime
+modules = weather,aerlive,battery,cpu,memory,sensors2,amixer,datetime
 theme = dracula-powerline
 
 [module-parameters]
