--- a/i3/config
+++ b/i3/config
@@ -26,7 +26,6 @@ set $YELLOW         #ffff00
 
 set $BUMBLEBEE_STATUS_PATH   $HOME/.local/bin/bumblebee-status
 set $DUNST_CONFIG            $HOME/.i3/dunstrc
-set $WALLPAPER_PATH          $HOME/.wallpaper.png
 set $SCREEN_LOCK_PATH        $HOME/.dotfiles/bin/screenlock
 
 # Font family and size
@@ -203,7 +202,7 @@ exec --no-startup-id nm-applet                               # Start the network
 exec --no-startup-id fcitx                                   # Start the input mode
 exec --no-startup-id blueman-applet                          # Start the bluetooth applet
 exec --no-startup-id dunst -config $DUNST_CONFIG             # Start the launch menu
-exec --no-startup-id feh --bg-fill $WALLPAPER_PATH           # Set up the wallpaper
+exec --no-startup-id dwall -s tokyo                          # Set the wallpaper
 exec --no-startup-id gpg-agent --daemon --enable-ssh-support # Start the GPG agent
 exec --no-startup-id /usr/lib/geoclue-2.0/demos/agent        # Start geoclue
 exec --no-startup-id redshift                                # Start redshift
