Set the bumblebee-status theme to gruvbox-powerline.

--- a/i3/bumblebee-status.conf
+++ b/i3/bumblebee-status.conf
@@ -1,6 +1,6 @@
 [core]
 modules = weather,aerlive,battery,cpu,memory,sensors2,amixer,datetime
-theme = dracula-powerline
+theme = gruvbox-powerline
 
 [module-parameters]
 datetime.format = %a %m/%d %H:%M
