--- a/lxdm.conf
+++ b/lxdm.conf
@@ -7,7 +7,7 @@
 # timeout=10
 
 ## default session or desktop used when no systemwide config
-session=/usr/bin/i3
+session=/usr/bin/startx
 
 ## uncomment and set to set numlock on your keyboard
 # numlock=0
@@ -37,7 +37,7 @@ gtk_theme=NumixSolarizedLightRed
 #bg=/usr/share/backgrounds/default.png
 
 ## if show bottom pane
-bottom_pane=1
+bottom_pane=0
 
 ## if show language select control
 lang=0
