--- a/i3/config
+++ b/i3/config
@@ -189,7 +189,7 @@ exec --no-startup-id nm-applet                               # Start the network
 exec --no-startup-id fcitx                                   # Start the input mode
 exec --no-startup-id blueman-applet                          # Start the bluetooth applet
 exec --no-startup-id dunst -config $DUNST_CONFIG             # Start the launch menu
-exec --no-startup-id dwall -s tokyo                          # Set the wallpaper
+exec --no-startup-id "$HOME/.i3/scripts/randr home           # Set the wallpaper
 exec --no-startup-id gpg-agent --daemon --enable-ssh-support # Start the GPG agent
 exec --no-startup-id /usr/lib/geoclue-2.0/demos/agent        # Start geoclue
 exec --no-startup-id redshift                                # Start redshift
