--- a/i3/bumblebee-status.conf
+++ b/i3/bumblebee-status.conf
@@ -1,6 +1,6 @@
 [core]
 modules = weather,aerlive,battery,cpu,memory,sensors2,amixer,datetime
-theme = gruvbox-powerline-light
+theme = gruvbox-light
 
 [module-parameters]
 datetime.format = %a %m/%d %H:%M
