--- a/i3/config
+++ b/i3/config
@@ -10,45 +10,6 @@ set $workspace8    " doc "
 set $workspace9    " term "
 set $workspace0    " other "
 
-set $bumblebee_status_path   $HOME/.local/bin/bumblebee-status
-set $dunst_config            $HOME/.i3/dunstrc
-set $screen_lock_path        $HOME/.dotfiles/bin/screenlock
-
-set $black #1C1B19
-set $bright_black #918175
-
-set $red #EF2F27
-set $bright_red #F75341
-
-set $green #519F50
-set $bright_green #98BC37
-
-set $yellow #FBB829
-set $bright_yellow #FED06E
-
-set $blue #2C78BF
-set $bright_blue #68A8E4
-
-set $magenta #E02C6D
-set $bright_magenta #FF5C8F
-
-set $cyan #0AAEB3
-set $bright_cyan #53FDE9
-
-set $white #D0BFA1
-set $bright_white #FCE8C3
-
-set $orange #D75F00
-set $bright_orange #FF8700
-
-set $xgray1 #262626
-set $xgray2 #303030
-set $xgray3 #3A3A3A
-set $xgray4 #444444
-set $xgray5 #4E4E4E
-
-set $hard_black #121212
-
 # Font family and size
 font pango:JetBrainsMono NFP 9
 
@@ -72,10 +33,10 @@ bindsym $mod+d exec --no-startup-id "rofi -combi-modi drun,run -show combi"
 bindsym $mod+Shift+d exec --no-startup-id "rofi -combi-modi window,run -show combi"
 
 # Lock screen
-bindsym $mod+Shift+o exec --no-startup-id "$screen_lock_path"
+bindsym $mod+Shift+o exec --no-startup-id "$HOME/.dotfiles/bin/screenlock"
 
 # Print screen
-bindsym Print exec --no-startup-id gscreenshot
+bindsym Print exec --no-startup-id xfce4-screenshooter
 
 # Enter sleep mode
 bindsym $mod+Shift+s exec --no-startup-id "systemctl suspend"
@@ -191,33 +152,31 @@ bindsym $mod+Shift+m exec "$HOME/.i3/scripts/randr home"
 bindsym $mod+Shift+a exec "$HOME/.i3/scripts/randr auto"
 
 # Window appearance
-for_window [class="^.*"] border pixel 1
+for_window [class="^.*"] border normal 0
+gaps outer 4
+gaps inner 4
 
-# Colors                border        background  text          indicator child_border
-client.focused          $bright_black $xgray3     $yellow       $yellow   $bright_black
-client.focused_inactive $xgray3       $xgray3     $bright_black $xgray3   $xgray3
-client.unfocused        $xgray1       $xgray1     $bright_black $xgray1   $xgray1
-client.urgent           $red          $xgray1     $red          $red      $red
-client.placeholder      $xgray3       $hard_black $bright_black $xgray3   $xgray3
-client.background       $black
+# Colors                border   background  text     indicator  child_border
+client.focused          #fae8a4  #fae8a4     #1c1b19  #fae8a4    #fae8a4
+client.focused_inactive #fae8a4  #fae8a4     #1c1b19  #fae8a4    #fae8a4
+client.unfocused        #fae8a4  #fae8a4     #1c1b19  #fae8a4    #fae8a4
+client.urgent           #fae8a4  #fae8a4     #1c1b19  #fae8a4    #fae8a4
+client.placeholder      #000000  #ffffff     #fae8a4  #000000    #ffffff
 
 # Display workspaces and status bar
 bar {
-    status_command $bumblebee_status_path
+    status_command $HOME/.local/bin/bumblebee-status
     position top
     wheel_up_cmd nop
     wheel_down_cmd nop
     colors {
-        background $black
-        statusline $white
-        separator  $white
+        background #1c1b19
 
-        # Colors           border        background   text
-        focused_workspace  $bright_black $xgray3      $yellow
-        active_workspace   $xgray3       $xgray3      $bright_black
-        inactive_workspace $xgray3       $xgray1      $bright_black
-        urgent_workspace   $red          $red         $black
-        binding_mode       $magenta      $magenta     $bright_white
+        # Colors           border   background  text
+        focused_workspace  #fae8a4  #fae8a4     #1c1b19
+        active_workspace   #fae8a4  #fae8a4     #1c1b19
+        inactive_workspace #fae8a4  #fae8a4     #1c1b19
+        urgent_workspace   #cc4a22  #cc4a22     #ffffff
     }
 }
 
@@ -225,7 +184,7 @@ bar {
 exec --no-startup-id nm-applet                               # Start the network manager applet
 exec --no-startup-id fcitx                                   # Start the input mode
 exec --no-startup-id blueman-applet                          # Start the bluetooth applet
-exec --no-startup-id dunst -config $dunst_config             # Start the launch menu
+exec --no-startup-id dunst -config $HOME/.i3/dunstrc         # Start the launch menu
 exec --no-startup-id "$HOME/.i3/scripts/randr home           # Set the wallpaper
 exec --no-startup-id gpg-agent --daemon --enable-ssh-support # Start the GPG agent
 exec --no-startup-id /usr/lib/geoclue-2.0/demos/agent        # Start geoclue
